--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
         }
     ],
     "require": {
+        "php": "^7.4|^8.0",
         "illuminate/support": "^8.0",
         "livewire/livewire": "^2.0",
-        "arkecosystem/ui": "^1.0",
-        "arkecosystem/fortify": "^1.3"
+        "arkecosystem/ui": "^1.3",
+        "arkecosystem/fortify": "^1.7"
     },
     "autoload": {
         "psr-4": {
@@ -45,7 +46,7 @@
         "graham-campbell/analyzer": "^3.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/larastan": "^0.6.4",
-        "nunomaduro/laravel-mojito": "^0.2.4",
+        "nunomaduro/laravel-mojito": "^0.2.6",
         "pestphp/pest": "^0.3.0",
         "pestphp/pest-plugin-faker": "^0.3.0",
         "pestphp/pest-plugin-laravel": "^0.3.0",
