--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "illuminate/support": "^8.0",
         "livewire/livewire": "^2.0",
-        "arkecosystem/ui": "^1.3",
-        "arkecosystem/fortify": "^1.7"
+        "arkecosystem/ui": "^1.6",
+        "arkecosystem/fortify": "^2.0"
     },
     "autoload": {
         "psr-4": {
