--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.0",
-        "livewire/livewire": "^2.0",
-        "arkecosystem/ui": "^3.0",
-        "arkecosystem/fortify": "^4.0"
+        "illuminate/support": "^8.48",
+        "livewire/livewire": "^2.5",
+        "arkecosystem/ui": "^3.16",
+        "arkecosystem/fortify": "^4.5"        
     },
     "autoload": {
         "psr-4": {
@@ -41,23 +41,23 @@
             "./vendor/bin/pest --coverage --min=100 --coverage-html=.coverage --coverage-clover=coverage.xml"
         ]
     },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
-        "graham-campbell/analyzer": "^3.0",
-        "mockery/mockery": "^1.3.1",
-        "nunomaduro/larastan": "^0.6.4",
-        "nunomaduro/laravel-mojito": "^0.2.6",
-        "pestphp/pest": "^0.3.0",
-        "pestphp/pest-plugin-faker": "^0.3.0",
-        "pestphp/pest-plugin-laravel": "^0.3.0",
-        "pestphp/pest-plugin-livewire": "^0.3.0",
-        "phpunit/phpunit": "^9.3",
-        "psalm/plugin-laravel": "^1.4",
-        "rector/rector": "^0.8.14",
-        "teamtnt/laravel-scout-tntsearch-driver": "^10.0",
-        "vimeo/psalm": "^4.0",
-        "orchestra/testbench": "^6.2"
-    },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "graham-campbell/analyzer": "^3.0",
+        "mockery/mockery": "^1.4",
+        "nunomaduro/larastan": "^0.7.6",
+        "nunomaduro/laravel-mojito": "^0.2.8",
+        "pestphp/pest": "^1.7",
+        "pestphp/pest-plugin-faker": "^1.0",
+        "pestphp/pest-plugin-laravel": "^1.0",
+        "pestphp/pest-plugin-livewire": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "psalm/plugin-laravel": "^1.4",
+        "rector/rector": "^0.11.20",
+        "teamtnt/laravel-scout-tntsearch-driver": "^11.5",
+        "vimeo/psalm": "^4.8",
+        "orchestra/testbench": "^6.18"
+    }
 }
