--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,16 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.48",
+        "spatie/laravel-medialibrary": "^9.6",
         "livewire/livewire": "^2.5",
-        "arkecosystem/ui": "^3.16",
-        "arkecosystem/fortify": "^4.5"        
+        "arkecosystem/fortify": "^4.5"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.0",
+        "nunomaduro/larastan": "^0.7.6",
+        "pestphp/pest": "^1.7",
+        "orchestra/testbench": "^6.18",
+        "graham-campbell/analyzer": "^3.0"
     },
     "autoload": {
         "psr-4": {
@@ -42,22 +48,5 @@
         ]
     },
     "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.0",
-        "graham-campbell/analyzer": "^3.0",
-        "mockery/mockery": "^1.4",
-        "nunomaduro/larastan": "^0.7.6",
-        "nunomaduro/laravel-mojito": "^0.2.8",
-        "pestphp/pest": "^1.7",
-        "pestphp/pest-plugin-faker": "^1.0",
-        "pestphp/pest-plugin-laravel": "^1.0",
-        "pestphp/pest-plugin-livewire": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "psalm/plugin-laravel": "^1.4",
-        "rector/rector": "^0.11.20",
-        "teamtnt/laravel-scout-tntsearch-driver": "^11.5",
-        "vimeo/psalm": "^4.8",
-        "orchestra/testbench": "^6.18"
-    }
+    "prefer-stable": true
 }
